--- a/savannah-server/package.json
+++ b/savannah-server/package.json
@@ -13,6 +13,7 @@
     "engine.io": "^1.6.8",
     "engine.io-client": "^1.6.8",
     "express": "^4.13.4",
-    "morgan": "^1.7.0"
+    "morgan": "^1.7.0",
+    "resolve": "^1.1.7"
   }
 }
