update doc and example. Will not support node v5.0 for now

--- a/savannah-cli/templates/shooter/package.json
+++ b/savannah-cli/templates/shooter/package.json
@@ -9,8 +9,7 @@
   "license": "ISC",
   "dependencies": {
     "es6-module-loader": "^0.17.11",
-    "grunt": "^0.4.5",
-    "savannah-server": "0.0.1-SNAPSHOT",
+    "savannah-server": "^0.0.1-SNAPSHOT",
     "traceur": "0.0.102"
   }
 }
